<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DialogMissingObservations</class>
 <widget class="QWidget" name="DialogMissingObservations">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>651</width>
    <height>227</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Missing Observations</string>
  </property>
  <property name="windowIcon">
   <iconset>
    <normaloff>icons:missing.svg</normaloff>icons:missing.svg</iconset>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <property name="spacing">
    <number>2</number>
   </property>
   <property name="margin">
    <number>2</number>
   </property>
   <item>
    <layout class="QHBoxLayout" name="topRow">
     <property name="spacing">
      <number>2</number>
     </property>
     <item>
      <widget class="QLabel" name="labelExplain">
       <property name="font">
        <font>
         <weight>75</weight>
         <bold>true</bold>
        </font>
       </property>
       <property name="text">
        <string>Find missing values for RR_24</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="labelType">
       <property name="text">
        <string>&amp;Type:</string>
       </property>
       <property name="buddy">
        <cstring>comboType</cstring>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QComboBox" name="comboType"/>
     </item>
     <item>
      <widget class="MiDateTimeEdit" name="timeFrom">
       <property name="displayFormat">
        <string notr="true">yyyy-MM-dd</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="labelTo">
       <property name="text">
        <string> to:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="MiDateTimeEdit" name="timeTo">
       <property name="displayFormat">
        <string notr="true">yyyy-MM-dd</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="buttonApply">
       <property name="text">
        <string>&amp;Search</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QTableView" name="tableMissing"/>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>MiDateTimeEdit</class>
   <extends>QDateTimeEdit</extends>
   <header>util/MiDateTimeEdit.hh</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections>
  <connection>
   <sender>buttonApply</sender>
   <signal>clicked()</signal>
   <receiver>DialogMissingObservations</receiver>
   <slot>onUpdateClicked()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>430</x>
     <y>10</y>
    </hint>
    <hint type="destinationlabel">
     <x>492</x>
     <y>13</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>onUpdateClicked()</slot>
 </slots>
</ui>
